test/libsolidity/syntaxTests/parsing/mapping_with_names_nested_5.sol
contract test {
    mapping(address owner => mapping(address spender => bytes32 note));
}
// ----
// ParserError 2314: (86-87): Expected identifier but got ';'
